testsuite/tests/rename/should_fail/RnStaticPointersFail02.stderr

RnStaticPointersFail02.hs:5:12: error:
    Data constructor not in scope: T
